3.0 Frontend Login: Fix spacing issue

--- a/src/assets/frontend/src/scss/form/text.scss
+++ b/src/assets/frontend/src/scss/form/text.scss
@@ -21,7 +21,7 @@
 }
 
 .ult-form__field > .ult-form__input {
-	margin-top: 0;
+	margin-top: 0 !important;
 }
 
 	.ult-form__input:hover,
